--- a/system.ipynb
+++ b/system.ipynb
@@ -385,14 +385,17 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".NET (F#)",
-      "name": ".net-fsharp"
+      "display_name": ".NET (C#)",
+      "language": "C#",
+      "name": ".net-csharp"
     },
     "language_info": {
-      "name": "F#",
-      "version": ""
-    },
-    "orig_nbformat": 3
+      "file_extension": ".cs",
+      "mimetype": "text/x-csharp",
+      "name": "C#",
+      "pygments_lexer": "csharp",
+      "version": "9.0"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 4
