--- a/system.ipynb
+++ b/system.ipynb
@@ -29,7 +29,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">10</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "Nullable(10)\n",
         "|> Option.ofNullable"
@@ -43,7 +50,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">False</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "Nullable<int>()\n",
         "|> Option.ofNullable \n",
@@ -58,7 +72,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">hello</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "Ok \"hello\"\n",
         "|> Option.ofResult"
@@ -72,7 +93,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">False</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "Error \"failed\" :> Result<'a, 'b>\n",
         "|> Option.ofResult\n",
@@ -94,7 +122,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>ResultValue</th><th>ErrorValue</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">10</div></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "Some 10\n",
         "|> Result.ofOption \"wat\""
@@ -108,7 +143,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>ResultValue</th><th>ErrorValue</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">0</div></td><td><div class=\"dni-plaintext\">wat</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "None :> Option<int>\n",
         "|> Result.ofOption \"wat\""
@@ -122,7 +164,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>ResultValue</th><th>ErrorValue</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td><td><div class=\"dni-plaintext\">nope</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "[10; 11; 12;]\n",
         "|> Result.traverse (fun x -> if x < 12 then Ok x else Error \"nope\")"
@@ -136,7 +185,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th>ResultValue</th><th>ErrorValue</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\">[ 10, 11, 12 ]</div></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "[10; 11; 12;]\n",
         "|> Result.traverse (fun x -> if x < 13 then Ok x else Error \"nope\")"
@@ -157,7 +213,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">True</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "\"\"\n",
         "|> String.isEmpty"
@@ -171,7 +234,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">True</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "null\n",
         "|> String.isNullOrEmpty"
@@ -185,7 +255,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">True</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "\" \"\n",
         "|> String.isNullOrWhiteSpace"
@@ -199,7 +276,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "a,b"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "[|\"a\"; \"b\"|]\n",
         "|> String.join \",\""
@@ -213,7 +297,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "fiii"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "\"fooo\"\n",
         "|> String.replace \"o\" \"i\""
@@ -227,7 +318,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th><i>index</i></th><th>Value</th><th>value</th></tr></thead><tbody><tr><td>0</td><td><span>Foo</span></td><td></td></tr><tr><td>1</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr><tr><td>2</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "type Foo = Foo = 0 | Bar = 1\n",
         "\n",
@@ -243,7 +341,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th><i>index</i></th><th>Value</th><th>value</th></tr></thead><tbody><tr><td>0</td><td><span>Foo</span></td><td></td></tr><tr><td>1</td><td><span>Foo</span></td><td></td></tr><tr><td>2</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "type Foo = Foo = 0 | Bar = 1\n",
         "\n",
@@ -259,7 +364,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th><i>index</i></th><th>Value</th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">Foo</div></td><td></td></tr><tr><td>1</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr><tr><td>2</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "type Foo = Foo | Bar \n",
         "\n",
@@ -275,7 +387,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th><i>index</i></th><th>Value</th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">Foo</div></td><td></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">Bar</div></td><td></td></tr><tr><td>2</td><td></td><td><div class=\"dni-plaintext\">&lt;null&gt;</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "type Foo = Foo | Bar \n",
         "\n",
@@ -298,7 +417,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">2</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "async { return 1 }\n",
         "|> Async.map (fun x -> x + 1)\n",
@@ -313,7 +439,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">2</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "async { return 1 }\n",
         "|> Async.bind (fun x -> async { return x + 1 })\n",
@@ -328,7 +461,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">2</div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">2</div></td></tr></tbody></table>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "[ async { return 1 }; async { return 1 } ]\n",
         "|> Seq.mapAsync (fun x -> x + 1)\n",
@@ -344,7 +484,44 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "log "
+          },
+          "output_type": "unknown"
+        },
+        {
+          "data": {
+            "text/plain": "1"
+          },
+          "output_type": "unknown"
+        },
+        {
+          "data": {
+            "text/plain": "\n"
+          },
+          "output_type": "unknown"
+        },
+        {
+          "data": {
+            "text/plain": "log "
+          },
+          "output_type": "unknown"
+        },
+        {
+          "data": {
+            "text/plain": "1"
+          },
+          "output_type": "unknown"
+        },
+        {
+          "data": {
+            "text/plain": "\n"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "\n",
         "[ async { return 1 }; async { return 1 } ]\n",
@@ -360,7 +537,14 @@
           "language": "fsharp"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": "<div class=\"dni-plaintext\">Microsoft.FSharp.Control.FSharpAsync`1[System.Int32]</div>"
+          },
+          "output_type": "unknown"
+        }
+      ],
       "source": [
         "async {\n",
         "    try \n",
@@ -370,21 +554,79 @@
         "} \n",
         "// |> Async.RunSynchronously"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "csharp"
+        }
+      },
+      "source": [
+        "# Nullable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "unknown"
+        }
+      ],
+      "source": [
+        "null\n",
+        "|> Null.map (fun x -> x + \"1\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "hello world"
+          },
+          "output_type": "unknown"
+        }
+      ],
+      "source": [
+        "\"hello\"\n",
+        "|> Null.map (fun x -> x + \" world\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".NET (C#)",
-      "language": "C#",
-      "name": ".net-csharp"
+      "display_name": ".NET (F#)",
+      "name": ".net-fsharp"
     },
     "language_info": {
-      "file_extension": ".cs",
-      "mimetype": "text/x-csharp",
-      "name": "C#",
-      "pygments_lexer": "csharp",
-      "version": "9.0"
-    }
+      "name": "F#",
+      "version": ""
+    },
+    "orig_nbformat": 3
   },
   "nbformat": 4,
   "nbformat_minor": 4
