--- a/system.ipynb
+++ b/system.ipynb
@@ -411,6 +411,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "source": [
+        "## Regex"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "\"abc def axc\"\n",
+        "|> Regex.replace \"a..\" \"CHANGED\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "dotnet_interactive": {
+          "language": "fsharp"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "let phone = \"(123) 456-7890\"\n",
+        "match phone with\n",
+        "| Regex @\"\\(([0-9]{3})\\)[-. ]?([0-9]{3})[-. ]?([0-9]{4})\" [ area; prefix; suffix ] ->\n",
+        "    printfn \"Area: %s, Prefix: %s, Suffix: %s\" area prefix suffix\n",
+        "| _ -> printfn \"Not a phone number\""
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
