--- a/preconditions.ipynb
+++ b/preconditions.ipynb
@@ -71,7 +71,15 @@
   }
  ],
  "metadata": {
-  "language_info": {},
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
   "orig_nbformat": 3
  },
  "nbformat": 4,
