--- a/preconditions.ipynb
+++ b/preconditions.ipynb
@@ -72,13 +72,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
   "language_info": {
-   "name": "python",
-   "version": ""
+   "file_extension": ".cs",
+   "mimetype": "text/x-csharp",
+   "name": "C#",
+   "pygments_lexer": "csharp",
+   "version": "9.0"
   },
   "orig_nbformat": 3
  },
