--- a/src/preconditions.ipynb
+++ b/src/preconditions.ipynb
@@ -71,18 +71,7 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
-  },
-  "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "9.0"
-  },
+  "language_info": {},
   "orig_nbformat": 3
  },
  "nbformat": 4,
