--- a/src/preconditions.ipynb
+++ b/src/preconditions.ipynb
@@ -71,7 +71,19 @@
   }
  ],
  "metadata": {
-  "language_info": {},
+  "kernelspec": {
+   "display_name": "Python 3.9.2 64-bit ('3.9.2': pyenv)",
+   "name": "python392jvsc74a57bd081876449c4389dfb1c9b3542f0ed3550dfe9a4e9803bb36988fb1811462ccc9b"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "81876449c4389dfb1c9b3542f0ed3550dfe9a4e9803bb36988fb1811462ccc9b"
+   }
+  },
   "orig_nbformat": 3
  },
  "nbformat": 4,
