--- a/src/system.ipynb
+++ b/src/system.ipynb
@@ -451,29 +451,21 @@
         "    printfn \"Area: %s, Prefix: %s, Suffix: %s\" area prefix suffix\n",
         "| _ -> printfn \"Not a phone number\""
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "dotnet_interactive": {
-          "language": "fsharp"
-        }
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".NET (F#)",
-      "name": ".net-fsharp"
+      "display_name": ".NET (C#)",
+      "language": "C#",
+      "name": ".net-csharp"
     },
     "language_info": {
-      "name": "F#",
-      "version": ""
-    },
-    "orig_nbformat": 3
+      "file_extension": ".cs",
+      "mimetype": "text/x-csharp",
+      "name": "C#",
+      "pygments_lexer": "csharp",
+      "version": "9.0"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 4
