--- a/src/preconditions.ipynb
+++ b/src/preconditions.ipynb
@@ -72,8 +72,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.2 64-bit ('3.9.2': pyenv)",
-   "name": "python392jvsc74a57bd081876449c4389dfb1c9b3542f0ed3550dfe9a4e9803bb36988fb1811462ccc9b"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "name": "python",
