--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -10,8 +10,8 @@
       },
       "outputs": [],
       "source": [
-        "#load\"system.fsx\"\n",
-        "open System"
+        "#load\"helpers.fsx\"\n",
+        "open Helpers"
       ]
     },
     {
